// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug adds key and ref props first 1`] = `
<ClassComp key="123" ref={new ClassComp()} name="test">
  <div />
</ClassComp>
`;

exports[`debug adds key and ref props first 2`] = `
"<ClassComp name=\\"test\\">
  <div />
</ClassComp>"
`;

exports[`debug doesnt render children 1`] = `"<ChildComp baz bar={123} foo=\\"abc\\" />"`;

exports[`debug element output hides DOM output 1`] = `
"<Outer>
  <Header>TitleDescription!</Header>
  Description.
  <FuncComp />
</Outer>"
`;

exports[`debug element output hides React output 1`] = `
"<main role=\\"main\\">
  <div>
    <header id=\\"header\\">
      <h1>Title</h1>
      <p>Description!</p>
    </header>
  </div>
  <section>
    Description.
    <span />
  </section>
</main>"
`;

exports[`debug element output renders normal 1`] = `
"<Outer>
  <main role=\\"main\\">
    <Header>
      <div>
        <header id=\\"header\\">
          <h1>Title</h1>
          <p>Description!</p>
        </header>
      </div>
    </Header>
    <section>
      Description.
      <FuncComp>
        <span />
      </FuncComp>
    </section>
  </main>
</Outer>"
`;

exports[`debug formats array props 1`] = `
<ArrayProp list={[ 'string', 123, true, null, {}, ... 1 more item ]}>
  <ul />
</ArrayProp>
`;

exports[`debug formats array props 2`] = `
<ArrayProp
  list={[ { id: 1, name: 'Bruce Wayne' },
    { id: 2, name: 'Clark Kent' },
    { id: 3, name: 'Barry Allen' },
    { id: 4, name: 'Tony Stark' },
    { id: 5, name: 'Steve Rogers' },
    ... 1 more item ]}
>
  <ul />
</ArrayProp>
`;

exports[`debug formats function and class instance props 1`] = `
<FuncProp func={funcName()} inst={new ClassName()}>
  <div />
</FuncProp>
`;

exports[`debug formats map props 1`] = `
<MapProp map={Map { 'foo' => 123, 'bar' => 456, 'baz' => 789 }}>
  <div />
</MapProp>
`;

exports[`debug formats object props 1`] = `
<ObjectProp data={{ id: 1, name: 'Bruce Wayne', alias: 'Batman', age: 40 }}>
  <div />
</ObjectProp>
`;

exports[`debug formats regex props 1`] = `
<RegexProp pattern={/foo|bar|baz/u}>
  <div />
</RegexProp>
`;

exports[`debug formats set props 1`] = `
<SetProp set={Set { 'foo', 'bar', 'baz' }}>
  <div />
</SetProp>
`;

exports[`debug sorts props, and groups into: true first, everything else, event handlers last 1`] = `
<SortOrder
  enabled
  content={<div />}
  name="Rut"
  selected={false}
  onClick={mockConstructor()}
  onUpdate={mockConstructor()}
>
  <div />
</SortOrder>
`;

exports[`debug sorts props, and groups into: true first, everything else, event handlers last 2`] = `
"<SortOrder
  content={<div />}
  enabled
  name=\\"Rut\\"
  onClick={mockConstructor()}
  onUpdate={mockConstructor()}
  selected={false}
>
  <div />
</SortOrder>"
`;

exports[`debug sorts props, and groups into: true first, everything else, event handlers last 3`] = `
"<SortOrder
  enabled
  selected={false}
  name=\\"Rut\\"
  content={<div />}
  onClick={mockConstructor()}
  onUpdate={mockConstructor()}
>
  <div />
</SortOrder>"
`;

exports[`debug sorts props, and groups into: true first, everything else, event handlers last 4`] = `
"<SortOrder
  onClick={mockConstructor()}
  selected={false}
  name=\\"Rut\\"
  content={<div />}
  enabled
  onUpdate={mockConstructor()}
>
  <div />
</SortOrder>"
`;
